// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdownOrAction renders with multiple values 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    items={
      Immutable.List [
        <MenuItem>
          <LinkWithTargetBlank
            as="a"
            href="dude.com/1"
          >
            dude.com/1
          </LinkWithTargetBlank>
        </MenuItem>,
        <MenuItem>
          <LinkWithTargetBlank
            as="a"
            href="dude.com/2"
          >
            dude.com/2
          </LinkWithTargetBlank>
        </MenuItem>,
      ]
    }
    title={
      <Button>
        Dude URL
      </Button>
    }
  />
</UserActionWrapper>
`;

exports[`ActionsDropdownOrAction renders with single value 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="dude.com/1"
  >
    Dude URL
  </LinkWithTargetBlank>
</UserActionWrapper>
`;
